(library
 (name any)
 (modules any)
 (libraries asn1-combinators)
 (preprocess (pps ppx_deriving.std)))

(executable
 (name fuzz)
 (modules fuzz)
 (libraries any asn1-combinators))

(executable
 (name test)
 (modules test)
 (libraries alcotest any))

(alias
 (name fuzz-test)
 (deps test.exe)
 (action (run %{deps})))
