(library
 (name any)
 (modules any)
 (libraries asn1-combinators))

(executable
 (name fuzz)
 (modules fuzz)
 (libraries any asn1-combinators))

(executable
 (name test)
 (modules test)
 (libraries alcotest any))

(alias
 (name fuzz-test)
 (deps test.exe)
 (action (run %{deps} -e)))

(alias
 (name bun-fuzz)
 (deps fuzz.exe (source_tree input))
 (action (run timeout --preserve-status 50m bun -v --input=input --output=output -- ./fuzz.exe)))
